updates README file

--- a/README
+++ b/README
@@ -1,1 +1,7 @@
+echo 
+https://docs.google.com/spreadsheets/d/12RLJ0R_XST7SgpeqjfkbhrydtQE_oPCFnpH6aDqMcT4/edit#gid=1112367291
+https://docs.google.com/spreadsheets/d/1scjkUSAQW_NVIPtfY1q14yJSVY_zWk-o/edit#gid=1083042449
+https://docs.google.com/spreadsheets/d/11ryctI-m9vzQjKjwwlJavbCbj6TryBAT/edit#gid=653882565
+https://docs.google.com/spreadsheets/d/1Kmj99AMFDyJntGIU6FgO-SRyqIu1yoAVu3mBMayflnQ/edit#gid=1488756174
+https://docs.google.com/spreadsheets/d/1lxZZrOy3dsBDZfR0TAD59taVR1G7L5dhsHCc3maYcWg/edit#gid=1488756174
 
